--- a/index.html
+++ b/index.html
@@ -7,6 +7,72 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <nav>
+        <a>
+          Home
+        </a>
+        <a>
+          Recipes
+        </a>
+        <a>
+          About
+        </a>
+      </nav>
+      <img
+        src="../exercice-maquette-mobile-cook/_consigne/images/granola.jpg"
+        alt="Une photo de granola">
+      <h2>
+        Recipe of the day
+      </h2>
+      <h1>
+        Cherry-Almond Granola Crisp
+      </h1>
+      <p>
+        Eat this simple, juicy dish for breakfast or dessert.
+      </p>
+      <h2>
+        Jerelle Guy
+      </h2>
+    </header>
+    <main>
+      <h2>
+        What to cook this week
+      </h2>
+      <br/>
+      <div class="filipino-recipes">
+        <img
+          src="../exercice-maquette-mobile-cook/_consigne/images/filipino_recipes.jpg"
+          alt="Une photo de la recette d'Angela">
+        <p>
+          Angela Dimayuga’s 10 Essential Filipino Recipes
+        </p>
+      </div>
+      <div class="summer-pastas">
+        <img
+          src="../exercice-maquette-mobile-cook/_consigne/images/summer_pastas.jpg"
+          alt="Une photo de pâtes">
+        <p>
+          47 Bright and Beautiful Summer Pastas
+        </p>
+      </div>
+    </main>
+    <footer>
+      <h2>
+        Learn More
+      </h2>
+      <nav>
+        <a>
+          Our Cooks
+        </a>
+        <a>
+          See Our Features
+        </a>
+        <a>
+          FAQ
+        </a>
+      </nav>
+    </footer>
+
   </body>
 </html>
