changements des noms de selecteurs et des classes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8" />
     <title>Cook With Us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="menu">
         <a>
           Home
         </a>
@@ -22,39 +25,39 @@
       <img
         src="../exercice-maquette-mobile-cook/_consigne/images/granola.jpg"
         alt="Une photo de granola">
-      <h2>
+      <p class="category-today">
         Recipe of the day
-      </h2>
-      <h1>
+      </p>
+      <h2>
         Cherry-Almond Granola Crisp
-      </h1>
+      </h2>
       <p>
         Eat this simple, juicy dish for breakfast or dessert.
       </p>
-      <h2>
+      <p class="jerelle-guy">
         Jerelle Guy
-      </h2>
+      </p>
     </header>
     <main>
-      <h2>
+      <h2 class="category-this-week">
         What to cook this week
       </h2>
-      <br/>
+      <hr/>
       <div class="filipino-recipes">
         <img
           src="../exercice-maquette-mobile-cook/_consigne/images/filipino_recipes.jpg"
           alt="Une photo de la recette d'Angela">
-        <p>
+        <h3>
           Angela Dimayuga’s 10 Essential Filipino Recipes
-        </p>
+        </h3>
       </div>
       <div class="summer-pastas">
         <img
           src="../exercice-maquette-mobile-cook/_consigne/images/summer_pastas.jpg"
           alt="Une photo de pâtes">
-        <p>
+        <h3>
           47 Bright and Beautiful Summer Pastas
-        </p>
+        </h3>
       </div>
     </main>
     <footer>
@@ -73,6 +76,5 @@
         </a>
       </nav>
     </footer>
-
   </body>
 </html>
