codage du footer avec corrections dans le html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <h2>
         Learn More
       </h2>
-      <nav>
+      <nav class="footer-nav">
         <a>
           Our Cooks
         </a>
