--- a/index.html
+++ b/index.html
@@ -4,76 +4,53 @@
     <meta charset="utf-8" />
     <title>Cook With Us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Sorts+Mill+Goudy&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header>
       <nav class="menu">
-        <a>
-          Home
-        </a>
-        <a>
-          Recipes
-        </a>
-        <a>
-          About
-        </a>
+        <a> Home </a>
+        <a> Recipes </a>
+        <a> About </a>
       </nav>
-      <img
-        src="../exercice-maquette-mobile-cook/_consigne/images/granola.jpg"
-        alt="Une photo de granola">
-      <p class="category-today">
-        Recipe of the day
-      </p>
-      <h2>
-        Cherry-Almond Granola Crisp
-      </h2>
-      <p>
-        Eat this simple, juicy dish for breakfast or dessert.
-      </p>
-      <p class="jerelle-guy">
-        Jerelle Guy
-      </p>
+      <img src="_consigne/images/granola.jpg" alt="Une photo de granola" />
+      <div class="header">
+        <p class="category-today">Recipe of the day</p>
+        <h2>Cherry-Almond Granola Crisp</h2>
+        <p>Eat this simple, juicy dish for breakfast or dessert.</p>
+        <p class="jerelle-guy">Jerelle Guy</p>
+      </div>
     </header>
     <main>
-      <h2 class="category-this-week">
-        What to cook this week
-      </h2>
-      <hr/>
+      <h2 class="category-this-week">What to cook this week</h2>
+      <hr />
       <div class="filipino-recipes">
         <img
-          src="../exercice-maquette-mobile-cook/_consigne/images/filipino_recipes.jpg"
-          alt="Une photo de la recette d'Angela">
-        <h3>
-          Angela Dimayuga’s 10 Essential Filipino Recipes
-        </h3>
+          src="_consigne/images/filipino_recipes.jpg"
+          alt="Une photo de la recette d'Angela"
+        />
+        <h3>Angela Dimayuga’s 10 Essential Filipino Recipes</h3>
       </div>
       <div class="summer-pastas">
         <img
-          src="../exercice-maquette-mobile-cook/_consigne/images/summer_pastas.jpg"
-          alt="Une photo de pâtes">
-        <h3>
-          47 Bright and Beautiful Summer Pastas
-        </h3>
+          src="/_consigne/images/summer_pastas.jpg"
+          alt="Une photo de pâtes"
+        />
+        <h3>47 Bright and Beautiful Summer Pastas</h3>
       </div>
     </main>
     <footer>
-      <h2>
-        Learn More
-      </h2>
+      <h2>Learn More</h2>
       <nav class="footer-nav">
-        <a>
-          Our Cooks
-        </a>
-        <a>
-          See Our Features
-        </a>
-        <a>
-          FAQ
-        </a>
+        <a> Our Cooks </a>
+        <a> See Our Features </a>
+        <a> FAQ </a>
       </nav>
     </footer>
   </body>
